Fixed #1: applied z-index

--- a/less/ml-visjs-graph.js.less
+++ b/less/ml-visjs-graph.js.less
@@ -22,6 +22,7 @@
     top: 0;
     left: 2px;
     margin-top: 8px;
+    z-index: 1;
 
     .physics-enabled {
       margin-left: 20px;
